[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emod-hub.github.io"
version = "0.1.0"
description = "Documentation home for EMOD-Hub"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ["modeling", "IDM"]
dependencies = [
]
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings-python",
    "mkdocs-autoapi",
    "mkdocs-glightbox",
    "mkdocs-table-reader-plugin",
]
lint = [
    "flake8",
]
test = [
]

[project.urls]
Repository = "https://github.com/EMOD-Hub/emod-hub.github.io"
Documentation = "https://emod.idmod.org/"
Issues = "https://github.com/EMOD-Hub/issues-and-discussions/issues"
